// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for isOpen: false, position: end, hasFooter: false, hasSubFooter: false, theme: light 1`] = `
":host {
  display: flex;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  position: fixed !important;
  z-index: 99998 !important;
  justify-content: flex-end !important;
  visibility: hidden !important;
  transition: visibility 0s linear 0.6s !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  pointer-events: none !important;
  opacity: 0 !important;
  backdrop-filter: blur(0px) !important;
  -webkit-backdrop-filter: blur(0px) !important;
  transition: opacity 0.6s cubic-bezier(.16,1,.3,1), backdrop-filter 0.6s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.6s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  position: relative;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  color: #010205;
  background: #FFF;
  opacity: 0;
  transform: translate3d(100%, 0, 0);
  transition: opacity var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1) 0.6s, transform var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
  box-shadow: -3px 0px 30px rgba(0, 0, 0, 0.25);
}
.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: grid;
  grid-template-columns: minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
  align-items: flex-start;
  padding: 16px 0;
  padding-inline-start: clamp(32px, 2.75vw + 23px, 76px);
  background: #FFF;
}
.header--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px 5px 10px;
}
.dismiss {
  grid-area: 1 / 2;
  justify-self: center;
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  background-color: #FFF;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0)), linear-gradient(to bottom, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}"
`;

exports[`getComponentCss() should return correct css for isOpen: false, position: end, hasFooter: false, hasSubFooter: true, theme: dark 1`] = `
":host {
  display: flex;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  position: fixed !important;
  z-index: 99998 !important;
  justify-content: flex-end !important;
  visibility: hidden !important;
  transition: visibility 0s linear 0.6s !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(38, 38, 41, 0.67) !important;
  pointer-events: none !important;
  opacity: 0 !important;
  backdrop-filter: blur(0px) !important;
  -webkit-backdrop-filter: blur(0px) !important;
  transition: opacity 0.6s cubic-bezier(.16,1,.3,1), backdrop-filter 0.6s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.6s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  position: relative;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  overflow-y: auto;
  overscroll-behavior-y: none;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  color: #FBFCFF;
  background: #0E0E12;
  opacity: 0;
  transform: translate3d(100%, 0, 0);
  transition: opacity var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1) 0.6s, transform var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
  box-shadow: -3px 0px 30px rgba(0, 0, 0, 0.25);
}
.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: grid;
  grid-template-columns: minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
  align-items: flex-start;
  padding: 16px 0;
  padding-inline-start: clamp(32px, 2.75vw + 23px, 76px);
  background: #0E0E12;
}
.header--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 10px;
}
.dismiss {
  grid-area: 1 / 2;
  justify-self: center;
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  background-color: #0E0E12;
}
.sub-footer {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
}"
`;

exports[`getComponentCss() should return correct css for isOpen: false, position: end, hasFooter: true, hasSubFooter: true, theme: dark 1`] = `
":host {
  display: flex;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  position: fixed !important;
  z-index: 99998 !important;
  justify-content: flex-end !important;
  visibility: hidden !important;
  transition: visibility 0s linear 0.6s !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(38, 38, 41, 0.67) !important;
  pointer-events: none !important;
  opacity: 0 !important;
  backdrop-filter: blur(0px) !important;
  -webkit-backdrop-filter: blur(0px) !important;
  transition: opacity 0.6s cubic-bezier(.16,1,.3,1), backdrop-filter 0.6s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.6s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  position: relative;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  overflow-y: auto;
  overscroll-behavior-y: none;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  color: #FBFCFF;
  background: #0E0E12;
  opacity: 0;
  transform: translate3d(100%, 0, 0);
  transition: opacity var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1) 0.6s, transform var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
  box-shadow: -3px 0px 30px rgba(0, 0, 0, 0.25);
}
.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: grid;
  grid-template-columns: minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
  align-items: flex-start;
  padding: 16px 0;
  padding-inline-start: clamp(32px, 2.75vw + 23px, 76px);
  background: #0E0E12;
}
.header--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 10px;
}
.dismiss {
  grid-area: 1 / 2;
  justify-self: center;
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  background-color: #0E0E12;
}
.footer {
  position: sticky;
  bottom: 0;
  z-index: 1;
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  background: #0E0E12;
}
.footer--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px -5px 10px;
}
.sub-footer {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
}"
`;

exports[`getComponentCss() should return correct css for isOpen: false, position: left, hasFooter: false, hasSubFooter: false, theme: light 1`] = `
":host {
  display: flex;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  position: fixed !important;
  z-index: 99998 !important;
  justify-content: flex-end !important;
  visibility: hidden !important;
  transition: visibility 0s linear 0.6s !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  pointer-events: none !important;
  opacity: 0 !important;
  backdrop-filter: blur(0px) !important;
  -webkit-backdrop-filter: blur(0px) !important;
  transition: opacity 0.6s cubic-bezier(.16,1,.3,1), backdrop-filter 0.6s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.6s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  position: relative;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  color: #010205;
  background: #FFF;
  opacity: 0;
  transform: translate3d(100%, 0, 0);
  transition: opacity var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1) 0.6s, transform var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
  box-shadow: -3px 0px 30px rgba(0, 0, 0, 0.25);
}
.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: grid;
  grid-template-columns: minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
  align-items: flex-start;
  padding: 16px 0;
  padding-inline-start: clamp(32px, 2.75vw + 23px, 76px);
  background: #FFF;
}
.header--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px 5px 10px;
}
.dismiss {
  grid-area: 1 / 2;
  justify-self: center;
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  background-color: #FFF;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0)), linear-gradient(to bottom, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}"
`;

exports[`getComponentCss() should return correct css for isOpen: false, position: right, hasFooter: false, hasSubFooter: false, theme: light 1`] = `
":host {
  display: flex;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  position: fixed !important;
  z-index: 99998 !important;
  justify-content: flex-end !important;
  visibility: hidden !important;
  transition: visibility 0s linear 0.6s !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  pointer-events: none !important;
  opacity: 0 !important;
  backdrop-filter: blur(0px) !important;
  -webkit-backdrop-filter: blur(0px) !important;
  transition: opacity 0.6s cubic-bezier(.16,1,.3,1), backdrop-filter 0.6s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.6s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  position: relative;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  color: #010205;
  background: #FFF;
  opacity: 0;
  transform: translate3d(100%, 0, 0);
  transition: opacity var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1) 0.6s, transform var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
  box-shadow: -3px 0px 30px rgba(0, 0, 0, 0.25);
}
.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: grid;
  grid-template-columns: minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
  align-items: flex-start;
  padding: 16px 0;
  padding-inline-start: clamp(32px, 2.75vw + 23px, 76px);
  background: #FFF;
}
.header--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px 5px 10px;
}
.dismiss {
  grid-area: 1 / 2;
  justify-self: center;
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  background-color: #FFF;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0)), linear-gradient(to bottom, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}"
`;

exports[`getComponentCss() should return correct css for isOpen: false, position: start, hasFooter: false, hasSubFooter: false, theme: light 1`] = `
":host {
  display: flex;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  position: fixed !important;
  z-index: 99998 !important;
  justify-content: flex-start !important;
  visibility: hidden !important;
  transition: visibility 0s linear 0.6s !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  pointer-events: none !important;
  opacity: 0 !important;
  backdrop-filter: blur(0px) !important;
  -webkit-backdrop-filter: blur(0px) !important;
  transition: opacity 0.6s cubic-bezier(.16,1,.3,1), backdrop-filter 0.6s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.6s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  position: relative;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  color: #010205;
  background: #FFF;
  opacity: 0;
  transform: translate3d(-100%, 0, 0);
  transition: opacity var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1) 0.6s, transform var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
  box-shadow: 3px 0px 30px rgba(0, 0, 0, 0.25);
}
.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: grid;
  grid-template-columns: minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
  align-items: flex-start;
  padding: 16px 0;
  padding-inline-start: clamp(32px, 2.75vw + 23px, 76px);
  background: #FFF;
}
.header--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px 5px 10px;
}
.dismiss {
  grid-area: 1 / 2;
  justify-self: center;
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  background-color: #FFF;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0)), linear-gradient(to bottom, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}"
`;

exports[`getComponentCss() should return correct css for isOpen: false, position: start, hasFooter: false, hasSubFooter: true, theme: dark 1`] = `
":host {
  display: flex;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  position: fixed !important;
  z-index: 99998 !important;
  justify-content: flex-start !important;
  visibility: hidden !important;
  transition: visibility 0s linear 0.6s !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(38, 38, 41, 0.67) !important;
  pointer-events: none !important;
  opacity: 0 !important;
  backdrop-filter: blur(0px) !important;
  -webkit-backdrop-filter: blur(0px) !important;
  transition: opacity 0.6s cubic-bezier(.16,1,.3,1), backdrop-filter 0.6s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.6s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  position: relative;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  overflow-y: auto;
  overscroll-behavior-y: none;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  color: #FBFCFF;
  background: #0E0E12;
  opacity: 0;
  transform: translate3d(-100%, 0, 0);
  transition: opacity var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1) 0.6s, transform var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
  box-shadow: 3px 0px 30px rgba(0, 0, 0, 0.25);
}
.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: grid;
  grid-template-columns: minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
  align-items: flex-start;
  padding: 16px 0;
  padding-inline-start: clamp(32px, 2.75vw + 23px, 76px);
  background: #0E0E12;
}
.header--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 10px;
}
.dismiss {
  grid-area: 1 / 2;
  justify-self: center;
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  background-color: #0E0E12;
}
.sub-footer {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
}"
`;

exports[`getComponentCss() should return correct css for isOpen: false, position: start, hasFooter: true, hasSubFooter: true, theme: dark 1`] = `
":host {
  display: flex;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  position: fixed !important;
  z-index: 99998 !important;
  justify-content: flex-start !important;
  visibility: hidden !important;
  transition: visibility 0s linear 0.6s !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(38, 38, 41, 0.67) !important;
  pointer-events: none !important;
  opacity: 0 !important;
  backdrop-filter: blur(0px) !important;
  -webkit-backdrop-filter: blur(0px) !important;
  transition: opacity 0.6s cubic-bezier(.16,1,.3,1), backdrop-filter 0.6s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.6s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  position: relative;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  overflow-y: auto;
  overscroll-behavior-y: none;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  color: #FBFCFF;
  background: #0E0E12;
  opacity: 0;
  transform: translate3d(-100%, 0, 0);
  transition: opacity var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1) 0.6s, transform var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
  box-shadow: 3px 0px 30px rgba(0, 0, 0, 0.25);
}
.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: grid;
  grid-template-columns: minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
  align-items: flex-start;
  padding: 16px 0;
  padding-inline-start: clamp(32px, 2.75vw + 23px, 76px);
  background: #0E0E12;
}
.header--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 10px;
}
.dismiss {
  grid-area: 1 / 2;
  justify-self: center;
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  background-color: #0E0E12;
}
.footer {
  position: sticky;
  bottom: 0;
  z-index: 1;
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  background: #0E0E12;
}
.footer--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px -5px 10px;
}
.sub-footer {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
}"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: end, hasFooter: false, hasSubFooter: false, theme: auto 1`] = `
":host {
  display: flex;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  position: fixed !important;
  z-index: 99998 !important;
  justify-content: flex-end !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.6s cubic-bezier(.16,1,.3,1), backdrop-filter 0.6s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.6s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
@media (prefers-color-scheme: dark) {
  :host::before {
    background: rgba(38, 38, 41, 0.67) !important;
  }
}

.root {
  position: relative;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  color: #010205;
  background: #FFF;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1) 0s, transform var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1);
  box-shadow: -3px 0px 30px rgba(0, 0, 0, 0.25);
}
.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: grid;
  grid-template-columns: minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
  align-items: flex-start;
  padding: 16px 0;
  padding-inline-start: clamp(32px, 2.75vw + 23px, 76px);
  background: #FFF;
}
.header--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px 5px 10px;
}
.dismiss {
  grid-area: 1 / 2;
  justify-self: center;
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  background-color: #FFF;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0)), linear-gradient(to bottom, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}
@media (prefers-color-scheme: dark) {
  .root {
    color: #FBFCFF;
    background: #0E0E12;
  }
  .header {
    background: #0E0E12;
  }
  .header--shadow {
    box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 10px;
  }
  .content {
    background-image: linear-gradient(to top, #0E0E12, #0E0E12), linear-gradient(to top, #0E0E12, #0E0E12), linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(14, 14, 18, 0)), linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(14, 14, 18, 0));
    background-color: #0E0E12;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: end, hasFooter: false, hasSubFooter: false, theme: dark 1`] = `
":host {
  display: flex;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  position: fixed !important;
  z-index: 99998 !important;
  justify-content: flex-end !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(38, 38, 41, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.6s cubic-bezier(.16,1,.3,1), backdrop-filter 0.6s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.6s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  position: relative;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  color: #FBFCFF;
  background: #0E0E12;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1) 0s, transform var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1);
  box-shadow: -3px 0px 30px rgba(0, 0, 0, 0.25);
}
.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: grid;
  grid-template-columns: minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
  align-items: flex-start;
  padding: 16px 0;
  padding-inline-start: clamp(32px, 2.75vw + 23px, 76px);
  background: #0E0E12;
}
.header--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 10px;
}
.dismiss {
  grid-area: 1 / 2;
  justify-self: center;
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  background-color: #0E0E12;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #0E0E12, #0E0E12), linear-gradient(to top, #0E0E12, #0E0E12), linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(14, 14, 18, 0)), linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(14, 14, 18, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: end, hasFooter: false, hasSubFooter: false, theme: light 1`] = `
":host {
  display: flex;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  position: fixed !important;
  z-index: 99998 !important;
  justify-content: flex-end !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.6s cubic-bezier(.16,1,.3,1), backdrop-filter 0.6s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.6s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  position: relative;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  color: #010205;
  background: #FFF;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1) 0s, transform var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1);
  box-shadow: -3px 0px 30px rgba(0, 0, 0, 0.25);
}
.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: grid;
  grid-template-columns: minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
  align-items: flex-start;
  padding: 16px 0;
  padding-inline-start: clamp(32px, 2.75vw + 23px, 76px);
  background: #FFF;
}
.header--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px 5px 10px;
}
.dismiss {
  grid-area: 1 / 2;
  justify-self: center;
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  background-color: #FFF;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0)), linear-gradient(to bottom, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: end, hasFooter: false, hasSubFooter: true, theme: auto 1`] = `
":host {
  display: flex;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  position: fixed !important;
  z-index: 99998 !important;
  justify-content: flex-end !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.6s cubic-bezier(.16,1,.3,1), backdrop-filter 0.6s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.6s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
@media (prefers-color-scheme: dark) {
  :host::before {
    background: rgba(38, 38, 41, 0.67) !important;
  }
}

.root {
  position: relative;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  overflow-y: auto;
  overscroll-behavior-y: none;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  color: #010205;
  background: #FFF;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1) 0s, transform var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1);
  box-shadow: -3px 0px 30px rgba(0, 0, 0, 0.25);
}
.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: grid;
  grid-template-columns: minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
  align-items: flex-start;
  padding: 16px 0;
  padding-inline-start: clamp(32px, 2.75vw + 23px, 76px);
  background: #FFF;
}
.header--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px 5px 10px;
}
.dismiss {
  grid-area: 1 / 2;
  justify-self: center;
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  background-color: #FFF;
}
.sub-footer {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
}
@media (prefers-color-scheme: dark) {
  .root {
    color: #FBFCFF;
    background: #0E0E12;
  }
  .header {
    background: #0E0E12;
  }
  .header--shadow {
    box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 10px;
  }
  .content {
    background-color: #0E0E12;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: end, hasFooter: true, hasSubFooter: false, theme: dark 1`] = `
":host {
  display: flex;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  position: fixed !important;
  z-index: 99998 !important;
  justify-content: flex-end !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(38, 38, 41, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.6s cubic-bezier(.16,1,.3,1), backdrop-filter 0.6s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.6s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  position: relative;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  color: #FBFCFF;
  background: #0E0E12;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1) 0s, transform var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1);
  box-shadow: -3px 0px 30px rgba(0, 0, 0, 0.25);
}
.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: grid;
  grid-template-columns: minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
  align-items: flex-start;
  padding: 16px 0;
  padding-inline-start: clamp(32px, 2.75vw + 23px, 76px);
  background: #0E0E12;
}
.header--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 10px;
}
.dismiss {
  grid-area: 1 / 2;
  justify-self: center;
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  background-color: #0E0E12;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #0E0E12, #0E0E12), linear-gradient(to top, #0E0E12, #0E0E12), linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(14, 14, 18, 0)), linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(14, 14, 18, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}
.footer {
  position: sticky;
  bottom: 0;
  z-index: 1;
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  background: #0E0E12;
}
.footer--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px -5px 10px;
}"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: end, hasFooter: true, hasSubFooter: false, theme: light 1`] = `
":host {
  display: flex;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  position: fixed !important;
  z-index: 99998 !important;
  justify-content: flex-end !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.6s cubic-bezier(.16,1,.3,1), backdrop-filter 0.6s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.6s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  position: relative;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  color: #010205;
  background: #FFF;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1) 0s, transform var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1);
  box-shadow: -3px 0px 30px rgba(0, 0, 0, 0.25);
}
.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: grid;
  grid-template-columns: minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
  align-items: flex-start;
  padding: 16px 0;
  padding-inline-start: clamp(32px, 2.75vw + 23px, 76px);
  background: #FFF;
}
.header--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px 5px 10px;
}
.dismiss {
  grid-area: 1 / 2;
  justify-self: center;
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  background-color: #FFF;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0)), linear-gradient(to bottom, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}
.footer {
  position: sticky;
  bottom: 0;
  z-index: 1;
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  background: #FFF;
}
.footer--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px -5px 10px;
}"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: end, hasFooter: true, hasSubFooter: true, theme: light 1`] = `
":host {
  display: flex;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  position: fixed !important;
  z-index: 99998 !important;
  justify-content: flex-end !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.6s cubic-bezier(.16,1,.3,1), backdrop-filter 0.6s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.6s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  position: relative;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  overflow-y: auto;
  overscroll-behavior-y: none;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  color: #010205;
  background: #FFF;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1) 0s, transform var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1);
  box-shadow: -3px 0px 30px rgba(0, 0, 0, 0.25);
}
.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: grid;
  grid-template-columns: minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
  align-items: flex-start;
  padding: 16px 0;
  padding-inline-start: clamp(32px, 2.75vw + 23px, 76px);
  background: #FFF;
}
.header--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px 5px 10px;
}
.dismiss {
  grid-area: 1 / 2;
  justify-self: center;
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  background-color: #FFF;
}
.footer {
  position: sticky;
  bottom: 0;
  z-index: 1;
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  background: #FFF;
}
.footer--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px -5px 10px;
}
.sub-footer {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
}"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: start, hasFooter: false, hasSubFooter: false, theme: dark 1`] = `
":host {
  display: flex;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  position: fixed !important;
  z-index: 99998 !important;
  justify-content: flex-start !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(38, 38, 41, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.6s cubic-bezier(.16,1,.3,1), backdrop-filter 0.6s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.6s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  position: relative;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  color: #FBFCFF;
  background: #0E0E12;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1) 0s, transform var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1);
  box-shadow: 3px 0px 30px rgba(0, 0, 0, 0.25);
}
.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: grid;
  grid-template-columns: minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
  align-items: flex-start;
  padding: 16px 0;
  padding-inline-start: clamp(32px, 2.75vw + 23px, 76px);
  background: #0E0E12;
}
.header--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 10px;
}
.dismiss {
  grid-area: 1 / 2;
  justify-self: center;
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  background-color: #0E0E12;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #0E0E12, #0E0E12), linear-gradient(to top, #0E0E12, #0E0E12), linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(14, 14, 18, 0)), linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(14, 14, 18, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: start, hasFooter: false, hasSubFooter: false, theme: light 1`] = `
":host {
  display: flex;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  position: fixed !important;
  z-index: 99998 !important;
  justify-content: flex-start !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.6s cubic-bezier(.16,1,.3,1), backdrop-filter 0.6s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.6s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  position: relative;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  color: #010205;
  background: #FFF;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1) 0s, transform var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1);
  box-shadow: 3px 0px 30px rgba(0, 0, 0, 0.25);
}
.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: grid;
  grid-template-columns: minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
  align-items: flex-start;
  padding: 16px 0;
  padding-inline-start: clamp(32px, 2.75vw + 23px, 76px);
  background: #FFF;
}
.header--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px 5px 10px;
}
.dismiss {
  grid-area: 1 / 2;
  justify-self: center;
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  background-color: #FFF;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0)), linear-gradient(to bottom, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: start, hasFooter: true, hasSubFooter: false, theme: dark 1`] = `
":host {
  display: flex;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  position: fixed !important;
  z-index: 99998 !important;
  justify-content: flex-start !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(38, 38, 41, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.6s cubic-bezier(.16,1,.3,1), backdrop-filter 0.6s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.6s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  position: relative;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  color: #FBFCFF;
  background: #0E0E12;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1) 0s, transform var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1);
  box-shadow: 3px 0px 30px rgba(0, 0, 0, 0.25);
}
.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: grid;
  grid-template-columns: minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
  align-items: flex-start;
  padding: 16px 0;
  padding-inline-start: clamp(32px, 2.75vw + 23px, 76px);
  background: #0E0E12;
}
.header--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 10px;
}
.dismiss {
  grid-area: 1 / 2;
  justify-self: center;
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  background-color: #0E0E12;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #0E0E12, #0E0E12), linear-gradient(to top, #0E0E12, #0E0E12), linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(14, 14, 18, 0)), linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(14, 14, 18, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}
.footer {
  position: sticky;
  bottom: 0;
  z-index: 1;
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  background: #0E0E12;
}
.footer--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px -5px 10px;
}"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: start, hasFooter: true, hasSubFooter: false, theme: light 1`] = `
":host {
  display: flex;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  position: fixed !important;
  z-index: 99998 !important;
  justify-content: flex-start !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.6s cubic-bezier(.16,1,.3,1), backdrop-filter 0.6s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.6s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  position: relative;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  color: #010205;
  background: #FFF;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1) 0s, transform var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1);
  box-shadow: 3px 0px 30px rgba(0, 0, 0, 0.25);
}
.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: grid;
  grid-template-columns: minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
  align-items: flex-start;
  padding: 16px 0;
  padding-inline-start: clamp(32px, 2.75vw + 23px, 76px);
  background: #FFF;
}
.header--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px 5px 10px;
}
.dismiss {
  grid-area: 1 / 2;
  justify-self: center;
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  background-color: #FFF;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0)), linear-gradient(to bottom, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}
.footer {
  position: sticky;
  bottom: 0;
  z-index: 1;
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  background: #FFF;
}
.footer--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px -5px 10px;
}"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: start, hasFooter: true, hasSubFooter: true, theme: light 1`] = `
":host {
  display: flex;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  position: fixed !important;
  z-index: 99998 !important;
  justify-content: flex-start !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.6s cubic-bezier(.16,1,.3,1), backdrop-filter 0.6s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.6s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  position: relative;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  overflow-y: auto;
  overscroll-behavior-y: none;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  color: #010205;
  background: #FFF;
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1) 0s, transform var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1);
  box-shadow: 3px 0px 30px rgba(0, 0, 0, 0.25);
}
.header {
  position: sticky;
  top: 0;
  z-index: 2;
  display: grid;
  grid-template-columns: minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
  align-items: flex-start;
  padding: 16px 0;
  padding-inline-start: clamp(32px, 2.75vw + 23px, 76px);
  background: #FFF;
}
.header--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px 5px 10px;
}
.dismiss {
  grid-area: 1 / 2;
  justify-self: center;
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  background-color: #FFF;
}
.footer {
  position: sticky;
  bottom: 0;
  z-index: 1;
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  background: #FFF;
}
.footer--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px -5px 10px;
}
.sub-footer {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
}"
`;
